--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>baidu</title>
+	<title>GPbest</title>
+	<link rel="stylesheet" href="index.css">
+	
 </head>
 <body>
   <p>欢迎来到我的页面</P>	
