--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h2>本网站由GP运营、维护和管理<h2>	
+  <h2>欢迎您的访问！<br/>本网站由GP运营、维护和管理<h2>	
 </body>
 </html>
