--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
   <h2>欢迎您的访问！<br/>本网站由GP运营、维护和管理<h2>	
+  <div class="flex-container">
+  <div class="flex-item">个人简历</div>
+  <div class="flex-item">flex item 2</div>
+  <div class="flex-item">flex item 3</div>  
+</div>
 </body>
 </html>
