--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h2>欢迎您的访问！<br/>本网站由GP运营、维护和管理<h2>	
   <div class="flex-container">
-  <div class="flex-item">个人简历</div>
-  <div class="flex-item">flex item 2</div>
-  <div class="flex-item">flex item 3</div>  
+  <div class="flex-item">个人简历<br><span>&nbsp;&nbsp;姓名GP,身高178，性别男，重庆江津人,本科就读于云南大学资源环境与地球科学学院地理信息科学专业。</span></div>
+  <div class="flex-item">个人爱好<br><span>&nbsp;&nbsp;喜欢读书，偶尔写些小文章；喜欢运动，例如跑步、俯卧撑、仰卧起坐；喜欢编程，业余爱好，菜鸟水平。</span></div>
+  <div class="flex-item">个人梦想<br><span>&nbsp;&nbsp;曾经梦想远大，美利坚合众国总统，现只想当个地球村村长。业余写写书旅旅游，顺带将老G家发扬光大。</span></div>
 </div>
 </body>
 </html>
