--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   	<div class="flex-item">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;个人梦想<br><span>&nbsp;&nbsp;曾经梦想远大，不做美利坚合众国总统誓不罢休，现只想当个地球村村长。业余写写书旅旅游，顺带再将老G家发扬光大。</span></div>
   </div>
 	<table class="table table-bordered">
-  <caption>个人扩展资料：</caption>
+  <caption style="text-align:center">个人扩展资料</caption>
   <thead>
     <tr>
       <th>喜好</th>
