--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   	<div class="flex-item">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;个人爱好<br><span>&nbsp;&nbsp;喜欢读书，偶尔写些小文章；喜欢运动，例如跑步、俯卧撑、仰卧起坐和拳击等；喜欢编程，仅业余爱好，且菜鸟水平。</span></div>
   	<div class="flex-item">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;个人梦想<br><span>&nbsp;&nbsp;曾经梦想远大，不做美利坚合众国总统誓不罢休，现只想当个地球村村长。业余写写书旅旅游，顺带再将老G家发扬光大。</span></div>
   </div>
-	<table class="table table-bordered">
+	<table class="table table-bordered" style="width:630px;margin: 0 auto">
   <caption style="text-align:center">个人扩展资料</caption>
   <thead>
     <tr>
